# dust_renderer

./: Cargo.toml  README.md  capture1.rdc  capture11.rdc  capture4.rdc  capture6.rdc  capture7.rdc  capture9.rdc  fps.txt
captures/: capture.rdc  capture10.rdc  capture12.rdc  capture13.rdc  capture2.rdc  capture3.rdc  capture5.rdc  capture8.rdc
src/: counter.json  cutout.rs  dumb_errors.md  dust.wgsl  gpu_vec.rs  lib.rs  main.rs  paint_image.wgsl  render_element.rs  wburrito.rs
