[package]
name = "dust_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.1"
encase = "0.6.1"
kurbo = "0.10.4"
pollster = "0.3.0"
tao = "0.22.2"
keyframe = "1.1.1"
env_logger = "0.10.0"