[package]
name = "dust_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.1"
encase = {version = "0.6.1", features = ["glam"]}
kurbo = "0.10.4"
pollster = "0.3.0"
tao = "0.22.2"
raw-window-handle = "0.5.2"

log = "0.4.20"
glam = "0.24.2"

guillotiere = "0.6.2"



